--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -7,15 +7,6 @@
 	<meta http-equiv="expires" content="0">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<style>
-		* {
-			margin: 0px;
-			padding: 0px;
-			font: 10px "Gotham A", "Gotham B", sans-serif;
-			font-weight: 500;
-			color: #8a8a8a;
-			t-ext-transform: uppercase;
-		}
-
 		.cumulative {
 			b-ackground: linear-gradient(to right, green 0%, gray 33%, gray 66%, red 100%);
 			white-space: nowrap;
@@ -109,46 +100,6 @@
 			padding: 10px 10px 10px 10px;
 		}
 
-		header {
-			background-color: #272b38;
-			color: #48d8a0;
-		}
-
-		header#subNavi {
-			background-color: darkred;
-			display: none;
-		}
-
-		header li {
-			list-style: none;
-			display: inline-block;
-			margin: 10px;
-			text-align: center;
-			vertical-align: top;
-		}
-
-		section {
-			padding: 10px;
-		}
-
-		a {
-			text-decoration: none;
-		}
-
-		a:hover {
-			text-shadow: 1px 0px 20px yellow;
-		}
-
-		.noselect {
-			-webkit-touch-callout: none;
-			-webkit-user-select: none;
-			-khtml-user-select: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			-o-user-select: none;
-			user-select: none;
-		}
-
 		#time {
 			position: absolute;
 			right: 0px;
@@ -156,10 +107,10 @@
 			margin: 5px;
 		}
 	</style>
-	<link rel="stylesheet" type="text/css" href="/js/billboard.js/billboard.min.css" />
-	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-
-	<link href="/js/enjoyhint/enjoyhint.css" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="/default.css">
+	<link type="text/css" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
+	<link type="text/css" rel="stylesheet" href="/js/billboard.js/billboard.min.css" />
+	<link type="text/css" rel="stylesheet" href="/js/enjoyhint/enjoyhint.css">
 </head>
 
 <body class="noselect" unselectable="on" onselectstart="return false;" onmousedown="return false;">
