--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -117,7 +117,7 @@
 	<center>
 
 		<header>
-			<span id="time"></span>
+			<span title="last updated" id="time"></span>
 			<ul>
 				<li id="home" title="show other tools">
 					<a href="/">
@@ -139,18 +139,18 @@
 				<li>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				</li>
-				<li id="settings">
+				<li title="settings" id="settings">
 					<a href="javascript:void(0);">
 						<i class="fas fa-cogs" style="margin-left: 0px"></i>
 					</a>
 				</li>
-				<li>
+				<li title="comments">
 					<a id="commentLink" href="#disqus_thread" onclick='var d = document, s = d.createElement("script"); s.src = "https://fx-tools.disqus.com/embed.js"; s.setAttribute("data-timestamp", +new Date()); d.body.appendChild(s); this.onclick="";'>
 						0
 						<i class="fas fa-comments"></i>
 					</a>
 				</li>
-				<li>
+				<li title="quick tour">
 					<a href="javascript:void(0);" id="tour" onclick="javascript: startTour();">
 						<i class="fas fa-question"></i>
 					</a>
