--- a/fixings.html
+++ b/fixings.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 	<head>
@@ -97,67 +96,23 @@ var $ = function(id) {
 			}
 			obj.innerText = obj.getAttribute("name") + "\r\n" + d.toLocaleTimeString(locales, options);
 		});
-/*
-		var timeleftTags = Array.prototype.slice.call(cls("timeleft"));
-		timeleftTags.forEach(function(obj, idx, arr) {
-			var m = moment(obj.parentElement.getAttribute("time"));
-			var d = m.diff(d, "minutes");
-			
-			if (d < 0) {
-				obj.parentElement.setAttribute("time", m.add(1, 'day').locale("en").format());
-			}
-
-			if (0 < d && d < 60) {
-				obj.innerText	= d + " min";
-			}
-		});
-		*/
 	}
 
 	update();
 	setInterval(update, 1000);
 
 var specialTime = [
-
-/*
-CME Group FX Fixing Price Methodology
-http://www.cmegroup.com/trading/fx/currfixprice.html
-
-Forex Trading and the WMR Fix: http://people.stern.nyu.edu/jhasbrou/SternMicroMtg/SternMicroMtg2015/Papers/4ExEvans.pdf
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-There are many fixings in FX.
-In Western timezones the most widely used ones are
-midday London (Frankfurt Fix),
-13:15 London (ECB Fix)
-16:00 London (WMR fix).
-Usage patterns vary by customer type.
-Imho fixes are a poor way to get chunky business done as the conflict of interest created between the client with the business to transact and the bank executing the transaction is Large. Huge even.
-Source: http://www.trade2win.com/boards/forex/69052-what-london-fix.html
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-Sydney: 0900 (2200 GMT); 0945 (2245 GMT)
-Tokyo: 0955 (0055 GMT); 1100 (0200 GMT); 1300 (0400 GMT); 1400 (0500 GMT); 1500 (0600 GMT)
-London: 0900 GMT, 1000 GMT; 1100 GMT; 1200 GMT; 1315 GMT; 1500 GMT; 1600 GMT
-New York: 1200 (1700 GMT); 1500 (2000 GMT)
-Source: http://www.trade2win.com/boards/forex/13149-fixing-times-forex-market-s-2.html
-
-*/
-
-	// some other London fix: Fun and games on pound pairs as GBP plummets at the 11.00 GMT fix
-	// http://www.forexlive.com/news/!/fickle-finger-of-forex-hits-the-pound-20180223
-
-
 	// 09:50 Tokyo - Tokyo Fix
 	{ name: "Tokyo Fix", time: moment.tz({ hour: 09, minute: 50 }, "Asia/Tokyo") },
 
 	// 11:00 Berlin - Frankfurt Fix
-	// IS THIS A THING?
 	{ name: "Frankfurt Fix", time: moment.tz({ hour: 12, minute: 00 }, "Europe/Berlin") },
 
 	// 14:15 Berlin - ECB Fix
 	{ name: "ECB Fix", time: moment.tz({ hour: 14, minute: 15 }, "Europe/Berlin") },
 
 	// 16:00 London - WMR fix
-	{ name: "WMR Fix", time: moment.tz({ hour: 16, minute: 00 }, "Europe/London") },
+	{ name: "London Fix (WMR Fix)", time: moment.tz({ hour: 16, minute: 00 }, "Europe/London") },
 
 	// 10:00 AM ET - New York cut
 	{ name: "New York 10am ET Cut", time: moment.tz({ hour: 10, minute: 00 }, "America/New_York") },
@@ -167,7 +122,6 @@ Source: http://www.trade2win.com/boards/forex/13149-fixing-times-forex-market-s-
 
 	// 02:00 PM CT - CME Fix
 	{ name: "CME 2pm CT Fix", time: moment.tz({ hour: 14, minute: 00 }, "US/Central") },
-
 ];
 
 specialTime.sort(function(a, b) {
@@ -207,11 +161,7 @@ if (column == "local time") {
 	return { column: column, value: row["time"].local().format("HH:mm") };
 } else if (column == "time GMT") {
 	return { column: column, value: row["time"].utc().format("HH:mm")};
-} /* else if (column == "diff") {
-	//var m = row["time"].diff(now, "minutes");
-	//return { column: column, value: (m > 0) ? m + " min" : "---" };
-	return { column: column, value: "" };
-}*/
+}
 
                 return { column: column, value: row[column] };
             });
