--- a/fixings.html
+++ b/fixings.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>charts</title>
-		<link href="/js/c3/c3.css" rel="stylesheet">
 		<style>
 
 			.bar { fill: steelblue; }
@@ -52,7 +51,7 @@
 
 <div id="fixcut"></div>
 
-		<script src="/js/d3.v3.js"></script>
+		<script src="/js/d3.v3.min.js"></script>
 		<script src="/js/momentjs/moment-with-locales.js"></script>
 		<script src="/js/momentjs/moment-timezone-with-data.js"></script>
 
