--- a/fixings.html
+++ b/fixings.html
@@ -51,9 +51,9 @@
 
 <div id="fixcut"></div>
 
-		<script src="/js/d3.v3.min.js"></script>
-		<script src="/js/momentjs/moment-with-locales.js"></script>
-		<script src="/js/momentjs/moment-timezone-with-data.js"></script>
+		<script src="/js/d3/d3.v3.min.js"></script>
+		<script src="/js/momentjs/moment-with-locales.min.js"></script>
+		<script src="/js/momentjs/moment-timezone-with-data.min.js"></script>
 
 <script>
 var now = moment();
