--- a/fixings.html
+++ b/fixings.html
@@ -50,10 +50,16 @@
 	<body>
 
 <div id="fixcut"></div>
-
-		<script src="/js/d3/d3.v3.min.js"></script>
-		<script src="/js/momentjs/moment-with-locales.min.js"></script>
-		<script src="/js/momentjs/moment-timezone-with-data.min.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+	gtag('config', 'UA-112925276-1');
+</script>
+<script src="/js/d3/d3.v3.min.js"></script>
+<script src="/js/momentjs/moment-with-locales.min.js"></script>
+<script src="/js/momentjs/moment-timezone-with-data.min.js"></script>
 
 <script>
 var now = moment();
