--- a/fixings.html
+++ b/fixings.html
@@ -48,6 +48,7 @@
 		</style>
 	</head>
 	<body>
+<center>
 
 <div id="fixcut"></div>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
@@ -181,6 +182,6 @@ createTable(specialTime);
 
 </script>
 
-
+</center>
 	</body>
 </html>
