--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <a href="/change/cumulative.html">Cumulative Change Heatmap</a>      
       <br /><br />
       <a href="/cftc/cot.html">CFTC CoT Report Viewer</a>
+      <br /><br />
+      <a href="/fixings.html">Forex fixings</a>
+      
+      https://fxtools.github.io/
     </section>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
