--- a/fixings.html
+++ b/fixings.html
@@ -1,54 +1,166 @@
 <!DOCTYPE html>
-<html lang="de">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
-		<title>charts</title>
-		<style>
+<html lang="en">
 
-			.bar { fill: steelblue; }
+<head>
+	<meta charset="utf-8">
+	<title>FX Tools</title>
+	<meta http-equiv="expires" content="0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+	<style>
+		* {
+			margin: 0px;
+			padding: 0px;
+			f-ont: 14px "Gotham A", "Gotham B", sans-serif;
+			f-ont-weight: 700;
+			c-olor: #8a8a8a;
+		}
+		td {
+			padding: 5px;
+			text-align: right;
+		}
+		th[class$='_caption'] {
+			white-space: nowrap;
+		}
+		table a:link {
+			color: #666;
+			font-weight: bold;
+			text-decoration: none;
+		}
+		table a:visited {
+			color: #999999;
+			font-weight: bold;
+			text-decoration: none;
+		}
+		table a:active,
+		table a:hover {
+			color: #bd5a35;
+			text-decoration: underline;
+		}
+		table {
+			font-family: Arial, Helvetica, sans-serif;
+			/* color: #666; */
+			f-ont-size: 6px;
+			f-ont-size: calc(3px + 1vw);
+			t-ext-shadow: 1px 1px 0px #fff;
+			background: #eaebec;
+			m-argin: 20px;
+			border: #ccc 1px solid;
+			-moz-border-radius: 3px;
+			-webkit-border-radius: 3px;
+			border-radius: 3px;
+			-moz-box-shadow: 0 1px 2px #d1d1d1;
+			-webkit-box-shadow: 0 1px 2px #d1d1d1;
+			box-shadow: 0 1px 2px #d1d1d1;
+			padding: 10px;
+			m-argin: 10px;
+			width: 1%;
+		}
+		table .spacer {
+			padding-right: 5px;
+		}
+		table th {
+			p-adding: 21px 25px 22px 25px;
+			padding: 5px 0px 5px 0px;
+			border-top: 1px solid #fafafa;
+			border-bottom: 1px solid #e0e0e0;
+			background: #ededed;
+			background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
+			background: -moz-linear-gradient(top, #ededed, #ebebeb);
+		}
+		table th:first-child {
+			text-align: left;
+			p-adding-left: 20px;
+			padding: 0px 10px 0px 10px;
+		}
+		table tr:first-child th:first-child {
+			-moz-border-radius-topleft: 3px;
+			-webkit-border-top-left-radius: 3px;
+			border-top-left-radius: 3px;
+		}
+		table tr:first-child th:last-child {
+			-moz-border-radius-topright: 3px;
+			-webkit-border-top-right-radius: 3px;
+			border-top-right-radius: 3px;
+		}
+		table tr {
+			text-align: center;
+			p-adding-left: 20px;
+		}
+		table td:first-child {
+			text-align: left;
+			p-adding-left: 20px;
+			border-left: 0;
+		}
+		table td {
+			p-adding: 18px;
+			border-top: 1px solid #ffffff;
+			border-bottom: 1px solid #e0e0e0;
+			border-left: 1px solid #e0e0e0;
+			background: #fafafa;
+			background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
+			background: -moz-linear-gradient(top, #fbfbfb, #fafafa);
+		}
+		table tr.even td {
+			background: #f6f6f6;
+			background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
+			background: -moz-linear-gradient(top, #f8f8f8, #f6f6f6);
+		}
+		table tr:last-child td {
+			border-bottom: 0;
+		}
+		table tr:last-child td:first-child {
+			-moz-border-radius-bottomleft: 3px;
+			-webkit-border-bottom-left-radius: 3px;
+			border-bottom-left-radius: 3px;
+		}
+		table tr:last-child td:last-child {
+			-moz-border-radius-bottomright: 3px;
+			-webkit-border-bottom-right-radius: 3px;
+			border-bottom-right-radius: 3px;
+		}
+		/* 
+		table tr:hover td {
+			background: #f2f2f2;
+			background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
+			background: -moz-linear-gradient(top, #f2f2f2, #f0f0f0);
+		} */
+		table th[colspan="19"] {
+			text-align: center;
+		}
+		/* 
+		.hover {
+			background: #f2f2f2;
+			background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
+			background: -moz-linear-gradient(top, #f2f2f2, #f0f0f0);
+		} */
+		#options_traders * {
+			background: #ededed !important;
+		}
+		#options_only_report {
+			display: none;
+		}
+	</style>
+	<link type="text/css" rel="stylesheet" href="/default.css">
+	<link type="text/css" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
+</head>
 
-			div {
-				d-isplay: inline-block;
-			}
-
-			#daily {
-			}
-
-			#weekly {
-			}
-
-			.wrap {
-				 display: inline-block;
-				 width: 49%;
-			}
-
-			time[tz="Europe/Berlin"]:parent {
-				background-color: red;
-			}
-
-			table, td {
-				b-order: 1px solid black;
-				b-order-collapse: collapse;
-			}
-
-			table {
-				text-align: center;
-				border-collapse: collapse;
-			}
-
-			th, td {
-				border: 1px solid black;
-			}
-
-			td {
-				padding: 5px;
-			}
-
-		</style>
-	</head>
-	<body>
-<center>
+<body class="noselect" unselectable="on" onselectstart="return false;">
+	<center>
+		<header>
+			<span id="time"></span>
+			<ul>
+				<li id="home" title="show other tools">
+					<a href="/">
+						<i class="fas fa-home"></i>
+					</a>
+				</li>
+				<li></li>
+				<li id="date">
+				</li>
+				<li></li>
+			</ul>
+		</header>
+		<section>
 
 <div id="fixcut"></div>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
@@ -181,7 +293,8 @@ if (column == "local time") {
 createTable(specialTime);
 
 </script>
-
-</center>
+			
+			</section>
+		</center>
 	</body>
 </html>
