--- a/fixings.html
+++ b/fixings.html
@@ -14,10 +14,11 @@
 			f-ont-weight: 700;
 			c-olor: #8a8a8a;
 		}
-		td {
+		th, td {
 			padding: 5px;
 			text-align: right;
 			white-space: nowrap;
+			text-align: center;
 		}
 		th {
 			white-space: nowrap;
@@ -296,6 +297,12 @@ createTable(specialTime);
 </script>
 			
 			</section>
+		<section>
+			<h1>Forex fixings and how they work</h1>
+			<a href="https://www.reuters.com/article/banks-forex-settlement-fixings/forex-fixings-and-how-they-work-idUSL6N0T23K720141112">Reuters: Forex fixings and how they work</a>
+			<a href="http://www.forexlive.com/news/!/what-are-currency-fixings-and-how-do-they-work-20100721">Forexlive: What are currency fixings and how do they work?</a>
+			<a href="https://www.investopedia.com/terms/f/fixing.asp">Investopedia: DEFINITION of 'Fixing'</a>
+		</section>
 		</center>
 	</body>
 </html>
