--- a/fixings.html
+++ b/fixings.html
@@ -157,8 +157,7 @@
 					</a>
 				</li>
 				<li></li>
-				<li id="date">
-				</li>
+				<li>Forex fixings</li>
 				<li></li>
 			</ul>
 		</header>
