--- a/fixings.html
+++ b/fixings.html
@@ -157,7 +157,7 @@
 					</a>
 				</li>
 				<li></li>
-				<li>Forex fixings</li>
+				<li><h1>Forex Fixings</h1></li>
 				<li>&nbsp;</li>
 			</ul>
 		</header>
