--- a/fixings.html
+++ b/fixings.html
@@ -21,7 +21,7 @@
 			text-align: center;
 		}
 		th {
-			white-space: nowrap;
+			margin: 5px;
 		}
 		table a:link {
 			color: #666;
@@ -61,8 +61,6 @@
 			padding-right: 5px;
 		}
 		table th {
-			p-adding: 21px 25px 22px 25px;
-			padding: 5px 0px 5px 0px;
 			border-top: 1px solid #fafafa;
 			border-bottom: 1px solid #e0e0e0;
 			background: #ededed;
