--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -222,7 +222,15 @@
 		</header>
 
 		<section>
-			<h1 id="date"></h1>
+			
+			<a class="symbol" href="javascript:void(0);">EUR</a>
+			<a class="symbol" href="javascript:void(0);">JPY</a>
+			<a class="symbol" href="javascript:void(0);">GBP</a>
+			<a class="symbol" href="javascript:void(0);">AUD</a>
+			<a class="symbol" href="javascript:void(0);">CAD</a>
+			<a class="symbol" href="javascript:void(0);">CHF</a>
+			<a class="symbol" href="javascript:void(0);">NZD</a>
+			
 			<select id="symbol"></select>
 			<br/>
 			<br/>
