--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -145,7 +145,7 @@
 					</a>
 				</li>
 				<li title="comments">
-					<a id="commentLink" href="#disqus_thread" onclick='var d = document, s = d.createElement("script"); s.src = "https://fx-tools.disqus.com/embed.js"; s.setAttribute("data-timestamp", +new Date()); d.body.appendChild(s); this.onclick="";'>
+					<a id="commentLink" href="#disqus_thread">
 						<i class="fas fa-comments"></i>
 					</a>
 				</li>
