--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -212,7 +212,7 @@
 						</th>
 					</tr> -->
 					<tr id="futures_positions">
-						<th rowspan="4">Futures</th>
+						<th rowspan="2">Futures</th>
 						<td class="total" id="futures_oi_total"></td>
 						<th class="total spacer"></th>
 						<td class="cot" id="futures_positions_noncom_net"></td>
@@ -368,7 +368,7 @@
 						</th>
 					</tr> -->
 					<tr id="options_positions">
-						<th rowspan="4">Options</th>
+						<th rowspan="2">Options</th>
 						<td class="total" id="options_oi_total"></td>
 						<th class="total spacer"></th>
 						<td class="cot" id="options_positions_noncom_net"></td>
@@ -497,7 +497,7 @@
 						</th>
 					</tr> -->
 					<tr id="combined_positions">
-						<th rowspan="4">Combined</th>
+						<th rowspan="2">Combined</th>
 						<td class="total" id="combined_oi_total"></td>
 						<th class="total spacer"></th>
 						<td class="cot" id="combined_positions_noncom_net"></td>
@@ -646,9 +646,9 @@
 			<a class="symbol" href="javascript:void(0);">CAD</a> |
 			<a class="symbol" href="javascript:void(0);">CHF</a> |
 			<a class="symbol" href="javascript:void(0);">NZD</a>
-			<br/>
+			<!-- <br/>
 			<br/> Left click to switch report types.
-			<br/> Right click to switch columns.
+			<br/> Right click to switch columns. -->
 		</section>
 
 		<section>
