--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -145,7 +145,7 @@
 					</a>
 				</li>
 				<li title="comments">
-					<a id="commentLink" href="#disqus_thread">
+					<a id="commentLink" class="disqus-comment-count" href="#disqus_thread">
 						<i class="fas fa-comments"></i>
 					</a>
 				</li>
