--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -660,7 +660,7 @@
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
 	<script>
-		window.dataLayer = window.dataLayer ••[];
+		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'UA-112925276-1');
