--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -644,8 +644,8 @@
 				<dt>Explanatory Notes:</dt>
 				<dd>
 					<a target="_blank" href="http://www.cftc.gov/MarketReports/CommitmentsofTraders/ExplanatoryNotes/index.htm">Legacy</a>
-					•
-					<a target="_blank" href="http://www.cftc.gov/marketreports/commitmentsoftraders/ssLINK/disaggregatedcotexplanatorynot">Disaggregated</a>
+					<!-- •
+					<a target="_blank" href="http://www.cftc.gov/marketreports/commitmentsoftraders/ssLINK/disaggregatedcotexplanatorynot">Disaggregated</a> -->
 					•
 					<a target="_blank" href="http://www.cftc.gov/marketreports/commitmentsoftraders/ssLINK/tfmexplanatorynotes">Traders in Financial Futures</a>
 				</dd>
