--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -33,10 +33,10 @@
 			padding: 10px 10px 10px 10px;
 		}
 
-		td[id*=total],
+		/* td[id*=total],
 		.total {
 			display: none !important;
-		}
+		} */
 
 		td[id*=percentages],
 		td[id*=traders] {
@@ -159,7 +159,7 @@
 				<tbody>
 					<tr id="opponents_names">
 						<th rowspan="2" class="spacer"></th>
-						<th colspan="4" id="header_total" class="bg total rowshrink" title="Total Open Interest"> Total </th>
+						<th colspan="4" id="header_total" class="bg total shrink" title="Total Open Interest"> Total </th>
 						<th colspan="4" id="header_noncom" class="fg cot shrink" title="Noncommercial"> Non Com </th>
 						<th colspan="3" id="header_com" class="bg cot shrink no-spreading" title="Commercial"> Com </th>
 						<th colspan="4" id="header_dealer" class="fg tff shrink" title="Dealer/Intermediary"> Dealer </th>
