--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -169,7 +169,7 @@
 						<th colspan="3" id="header_nonrep" class="fg merged shrink no-spreading" colspan="3" title="Nonreportable"> Non Rep </th>
 					</tr>
 					<tr id="column_headers">
-						<th class="bg total">net</th>
+						<th class="bg total">oi</th>
 						<th class="bg total">long</th>
 						<th class="bg total">short</th>
 						<th class="bg total spreading">sprd</th>
