--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -163,7 +163,7 @@
 						<th colspan="4" id="header_noncom" class="fg cot shrink" title="Noncommercial"> Non Com </th>
 						<th colspan="3" id="header_com" class="bg cot shrink no-spreading" title="Commercial"> Com </th>
 						<th colspan="4" id="header_dealer" class="fg tff shrink" title="Dealer/Intermediary"> Dealer </th>
-						<th colspan="4" id="header_manager" class="bg tff shrink" title="Asset Manager/Institutional"> Manager </th>
+						<th colspan="4" id="header_manager" class="bg tff shrink" title="Asset Manager/Institutional"> Institutional </th>
 						<th colspan="4" id="header_funds" class="fg tff shrink" title="Leveraged Funds"> Funds </th>
 						<th colspan="4" id="header_other" class="bg tff shrink" title="Other Reportables"> Other Rep </th>
 						<th colspan="3" id="header_nonrep" class="fg merged shrink no-spreading" colspan="3" title="Nonreportable"> Non Rep </th>
