--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -109,7 +109,7 @@
 		
 		a[id="prev"][href="javascript:void(0);"],
 		a[id="next"][href="javascript:void(0);"] {
-			color: #272b38;
+			color: #272b38 !important;
 		}
 	</style>
 	<link type="text/css" rel="stylesheet" href="/default.css">
