--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -141,12 +141,9 @@
 						<i class="fas fa-angle-double-right"></i>
 					</a>
 				</li>
-				<li>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				</li>
-				<li title="settings" id="settings">
+				<li id="settings" title="settings">
 					<a href="javascript:void(0);">
-						<i class="fas fa-cogs" style="margin-left: 0px"></i>
+						<i class="fas fa-cogs"></i>
 					</a>
 				</li>
 				<li title="comments">
@@ -155,7 +152,7 @@
 					</a>
 				</li>
 				<li title="quick tour">
-					<a href="javascript:void(0);" id="tour" onclick="javascript: startTour();">
+					<a id="tour" href="javascript:void(0);" onclick="javascript: startTour();">
 						<i class="fas fa-question"></i>
 					</a>
 				</li>
