--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -7,11 +7,8 @@
 	<meta http-equiv="expires" content="0">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<style>
-		* {
-		    margin: 0px;
-		    padding: 0px;
-		    font: 12px "Gotham A", "Gotham B", sans-serif;
-		    font-weight: 500;
+		body {
+		    overflow-y: scroll;
 		}
 	</style>
 	<link type="text/css" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
