--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -82,13 +82,9 @@
 						<i class="fas fa-angle-double-right"></i>
 					</a>
 				</li>
-
-				<li>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				</li>
 				<li id="cogs" title="show settings">
 					<a href="javascript:void(0);">
-						<i class="fas fa-cogs" style="margin-left: 0px"></i>
+						<i class="fas fa-cogs"></i>
 					</a>
 				</li>
 				<li title="show comments">
