--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -151,7 +151,7 @@
 						<i class="fas fa-cogs"></i>
 					</a>
 				</li>
-				<li title="comments" style="width: 25px; text-align: right;">
+				<li title="comments" style="width: 25px; text-align: right; white-space: nowrap">
 					<a id="commentLink" class="disqus-comment-count" href="#disqus_thread">
 						<i class="fas fa-comments"></i>
 					</a>
