--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -465,6 +465,10 @@
 			<div id="chart"></div>
 			<div id="old"></div>
 		</section>
+		
+		<section>
+			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have a question? Ask in Forex Chat!</a>
+		</section>
 
 		<section id="comments">
 			<div id="disqus_thread"></div>
