--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -467,7 +467,7 @@
 		</section>
 		
 		<section>
-			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have a question? Ask in Forex Chat!</a>
+			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have questions or comments? Join our FX chat!</a>
 		</section>
 
 		<section id="comments">
