--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -754,6 +754,10 @@
 			</dl>
 		</section>
 
+		<section>
+			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have questions or comments? Join our FX chat!</a>
+		</section>
+
 		<section id="comments">
 			<div id="disqus_thread"></div>
 		</section>
