--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <a href="/cftc/cot.html">CFTC CoT Report Viewer</a>
       <br /><br />
       <a href="/fixings.html">Forex fixings</a>
-    </section>
+      <br /><br />
+			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have questions or comments? Join our FX chat!</a>
+		</section>
+
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
