--- a/fixings.html
+++ b/fixings.html
@@ -303,6 +303,11 @@ createTable(specialTime);
 			<br/><br/>
 			<a target="_blank" href="https://www.investopedia.com/terms/f/fixing.asp">Investopedia: DEFINITION of 'Fixing'</a>
 		</section>
+
+		<section>
+			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have questions or comments? Join our FX chat!</a>
+		</section>
+	
 		</center>
 	</body>
 </html>
