--- a/fixings.html
+++ b/fixings.html
@@ -305,7 +305,7 @@ createTable(specialTime);
 		</section>
 
 		<section>
-			<a title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have questions or comments? Join our FX chat!</a>
+			<a target="_blank" title="chat" href="https://join.slack.com/t/fxfools/shared_invite/enQtMzczNzgzODY2ODUwLWQ0NDJhMTRlODc0MmRjNjNiNDcxMTg5NjU4MmZmMjg4NmM0N2RlMGZiYjEwMGJjNDE4NGM3MmQ5YjNjMjQ3MTg">Have questions or comments? Join our FX chat!</a>
 		</section>
 	
 		</center>
