--- a/fixings.html
+++ b/fixings.html
@@ -302,6 +302,8 @@ createTable(specialTime);
 			<a target="_blank" href="http://www.forexlive.com/news/!/what-are-currency-fixings-and-how-do-they-work-20100721">Forexlive: What are currency fixings and how do they work?</a>
 			<br/><br/>
 			<a target="_blank" href="https://www.investopedia.com/terms/f/fixing.asp">Investopedia: DEFINITION of 'Fixing'</a>
+			<br/><br/>
+			<a target="_blank" href="https://www.bloomberg.com/markets/currencies/fx-fixings">BFIX: Bloomberg FX Fixings</a>
 		</section>
 
 		<section>
