--- a/expiry/index.html
+++ b/expiry/index.html
@@ -118,8 +118,8 @@ try {
 
 $.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(xml) {
 	var doc = $($.parseXML(xml));
-	w(doc, doc.find("ccypairs").html());
-	$("#expiry").append(doc.find("ccypairs").html());
+	w(doc, doc.find("ccypairs"));
+	$("#expiry").append(doc.find("ccypairs"));
 });
 	
 </script>
