--- a/expiry/index.html
+++ b/expiry/index.html
@@ -117,7 +117,10 @@ try {
 }
 
 $.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(xml) {
-	var doc = $($.parseXML(xml));
+	var xmlDoc = $.parseXML(xml),
+		$xml = $(xmlDoc),
+
+	$title = $xml.find("ccypairs");
 	w(doc, doc.find("ccypairs"));
 	$("#expiry").append(doc.find("ccypairs"));
 });
