--- a/expiry/index.html
+++ b/expiry/index.html
@@ -118,10 +118,10 @@ try {
 
 $.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(xml) {
 	var xmlDoc = $.parseXML(xml),
-		$xml = $(xmlDoc),
-	    title = $xml.find("title");
-	w(xml, $xml, title, $xml.find("ccypairs"));
-	$("#expiry").append($xml.find("ccypairs"));
+		xmlDom = $(xmlDoc),
+	    title = xmlDom.find("title");
+	w(xmlDom, title);
+	//$("#expiry").append($xml.find("ccypairs"));
 });
 	
 </script>
