--- a/expiry/index.html
+++ b/expiry/index.html
@@ -116,12 +116,15 @@ try {
 	}
 }
 
-$.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(data) {
-	var xml = $.parseXML(data),
-	  $xml = $( xml ),
-	  $test = $xml.find('title');
-
-	console.log($test.text(), $xml.find("ccypairs"));
+$.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(xml) {
+	w("xml", xml);
+	var xmlDoc = $.parseXML(xml);
+	w("xmlDoc", xmlDoc);
+	var xmlDom = $(xmlDoc);
+	w("xmlDom", xmlDom);
+	var lala = $(xml);
+	w("lala", lala);
+	
 	//$("#expiry").append($xml.find("ccypairs"));
 });
 
